--- a/ProyectoCECRUD/Views/Contacto/Inicio.cshtml
+++ b/ProyectoCECRUD/Views/Contacto/Inicio.cshtml
@@ -18,6 +18,7 @@
                     <table class="table table-striped">
                         <thead>
                             <tr>
+                                <th>ID</th>
                                 <th>Nombres</th>
                                 <th>Apellidos</th>
                                 <th>Telefono</th>
@@ -28,13 +29,14 @@
                         <tbody>
                             @foreach (ProyectoCECRUD.Models.Contacto item in Model){
                                 <tr>
+                                    <td>@item.IdContacto</td>
                                     <td>@item.Nombres</td>
                                     <td>@item.Apellidos</td>
                                     <td>@item.Telefono</td>
                                     <td>@item.Correo</td>
                                     <td>
-                                        <a class="btn btn-primary btn-sm">Editar</a>
-                                        <a class="btn btn-danger btn-sm">Eliminar</a>
+                                        <a class="btn btn-primary btn-sm" href="@Url.Action("Editar","Contacto", new {idcontacto = item.IdContacto})">Editar</a>
+                                        <a class="btn btn-danger btn-sm" href="@Url.Action("Eliminar","Contacto", new {idcontacto = item.IdContacto})">Eliminar</a>
 
                                     </td>
                                 </tr>
